k8s/manifests/service.yaml
i# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: devops-implementation
  labels:
    app: devops-implementation
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: devops-implementation
  type: ClusterIP
